grade-reports/exam-2/test-easy-02.txt
CD to .. 
/home/mattox/repos/cs225/fa16-exam2-grading/submissions/pondxtr2
###############################
##                           ##
##     Grading question      ##
##                           ##
###############################
Grader dir is /home/mattox/repos/cs225/fa16-exam2-grading/code-grading/scripts
qid is easy-02
variant is
test_dir is /home/mattox/repos/cs225/fa16-exam2-grading/code-grading/scripts/tests/easy-02/
fullTmpDir = /home/mattox/repos/cs225/fa16-exam2-grading/submissions/pondxtr2/grade-.87s
:: Compiling...
g++ -std=c++0x -c -g -O0 -Wall -Wextra -Wno-unused-function   -c -o easy.o easy.cpp
easy.cpp: In function ‘bool append(LinkedList&, int)’:
easy.cpp:7:5: error: ‘myList’ was not declared in this scope
  if(myList.head != NULL)
     ^~~~~~
easy.cpp:9:31: error: ‘head’ was not declared in this scope
                 Node * temp = head;
                               ^~~~
easy.cpp:14:39: error: ‘newData’ was not declared in this scope
                 temp->next = new Node(newData);
                                       ^~~~~~~
easy.cpp:18:40: error: ‘newData’ was not declared in this scope
                 myList.head = new Node(newData);
                                        ^~~~~~~
easy.cpp:5:25: warning: unused parameter ‘mylist’ [-Wunused-parameter]
 bool append(LinkedList &mylist, int newdata)
                         ^~~~~~
easy.cpp:5:37: warning: unused parameter ‘newdata’ [-Wunused-parameter]
 bool append(LinkedList &mylist, int newdata)
                                     ^~~~~~~
<builtin>: recipe for target 'easy.o' failed
make: *** [easy.o] Error 1
Could not compile easy.o.

Grade for question : 0/100


~ ~ ~

Grade: 0

Details:
test,grade
_compiled,0
